most of the way along with blog stuff. everything works

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 {% include header.html %}
             <section id="portfolio">
                 <h2 class="title">Portfolio</h2>
-                <p class="portDesc">To give you a brief idea of what I've been up to recently, here are three websites that I completed in 2013. Each represents a passion of mine -- professional or otherwise -- and are built using the latest web standards on WordPress.</p>
+                <p class="secDesc">To give you a brief idea of what I've been up to recently, here are three websites that I completed in 2013. Each represents a passion of mine -- professional or otherwise -- and are built using the latest web standards on WordPress.</p>
                 {% for project in site.categories.projects %}
                 <article class="project">
                     <a href="{{ project.link }}" target="_blank">
@@ -18,6 +18,8 @@
                 {% endfor %}
             </section>
             <section id="documentation">
+                <h2 class="title">Documentation</h2>
+                <p class="secDesc">This is where I will documenting some of my processes and work. I would love your help. This is where I will documenting some of my processes and work. I would love your help.</p>
                 {% for post in site.categories.document %}
                 <div class="post">
                     <h3>
