--- a/_includes/innerHeader.html
+++ b/_includes/innerHeader.html
@@ -3,8 +3,10 @@
         <div class="wrap">
             <header>
                 <img src="{{site.url_root}}/images/logo_0_1.png" width="456" height="561" alt="Fitz" class="logo" />
-                <div class="homeDesc">
-                    {{ content }}
+                <div class="innerDesc">
+                    <h1>Fitz Ryland</h1>
+                    <h2>Freelance Web Designer</h2>
+                    <h3>http://workwith.fitz.to/</h3>
                     {% include nav.html %}
                 </div>
             </header>
