--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,27 @@
-<p>I would love to hear about your project and get to work. Email me at <a href="mailto:workwith@fitz.to">workwith@fitz.to</a>.</p>
-<p>Let's connect...</p>
-<a href="mailto:workwith@fitz.to" class="icon icon-mail" target="_blank"></a>
-<a href="http://www.linkedin.com/in/fitzhughryland/" class="icon icon-linkedin" target="_blank"></a>
-<a href="http://twitter.com/fitzhuge/" class="icon icon-twitter" target="_blank"></a>
+			<footer>
+				<p>I would love to hear about your project and get to work. Email me at <a href="mailto:workwith@fitz.to">workwith@fitz.to</a>.</p>
+				<p>Let's connect...</p>
+				<a href="mailto:workwith@fitz.to" class="icon icon-mail" target="_blank"></a>
+				<a href="http://www.linkedin.com/in/fitzhughryland/" class="icon icon-linkedin" target="_blank"></a>
+				<a href="http://twitter.com/fitzhuge/" class="icon icon-twitter" target="_blank"></a>
+			</footer>
+        </div>
+        <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.0.min.js"><\/script>')</script>
+        <script src="js/plugins.js"></script>
+        <script src="js/main.js"></script>
+        <!--[if lte IE 7]><script src="js/lte-ie7.js"></script><![endif]-->
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-40908085-1', 'fitz.to');
+          ga('send', 'pageview');
+        </script>
+        <script src="//static.getclicky.com/js" type="text/javascript"></script>
+        <script type="text/javascript">try{ clicky.init(100618153); }catch(e){}</script>
+        <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/100618153ns.gif" /></p></noscript>
+    </body>
+</html>
