updated section labeling in SCSS

--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,22 @@
-// Imports ***************************************************************
-@import "../bourbon/_bourbon.scss";
-// Variables ***************************************************************
+// http://patorjk.com/software/taag/#p=display&f=Georgia11&t=Type%20Something%20
+// `7MMF'                                               mm
+//   MM                                                 MM
+//   MM  `7MMpMMMb.pMMMb. `7MMpdMAo.  ,pW"Wq.`7Mb,od8 mmMMmm ,pP"Ybd
+//   MM    MM    MM    MM   MM   `Wb 6W'   `Wb MM' "'   MM   8I   `"
+//   MM    MM    MM    MM   MM    M8 8M     M8 MM       MM   `YMMMa.
+//   MM    MM    MM    MM   MM   ,AP YA.   ,A9 MM       MM   L.   I8
+// .JMML..JMML  JMML  JMML. MMbmmd'   `Ybmd9'.JMML.     `MbmoM9mmmP'
+//                          MM
+//                        .JMML.
+
+//                                ,,           ,,        ,,
+// `7MMF'   `7MF'                 db          *MM      `7MM
+//   `MA     ,V                                MM        MM
+//    VM:   ,V ,6"Yb.  `7Mb,od8 `7MM   ,6"Yb.  MM,dMMb.  MM  .gP"Ya  ,pP"Ybd
+//     MM.  M'8)   MM    MM' "'   MM  8)   MM  MM    `Mb MM ,M'   Yb 8I   `"
+//     `MM A'  ,pm9MM    MM       MM   ,pm9MM  MM     M8 MM 8M"""""" `YMMMa.
+//      :MM;  8M   MM    MM       MM  8M   MM  MM.   ,M9 MM YM.    , L.   I8
+//       VF   `Moo9^Yo..JMML.   .JMML.`Moo9^Yo.P^YbmdP'.JMML.`Mbmmd' M9mmmP'
 $fullBreak:850px;
 $fullWidth:730px;
 $mobileBreak:600px;
@@ -21,7 +37,14 @@ $buttonD:#7e59b5;
 $buttonBorderL:#9f78d9;
 $buttonBorderD:#7b4ac2;
 $buttonTextShadow:#f4ebff;
-// Mixin's *****************************************************************
+//                   ,,               ,,             gp
+// `7MMM.     ,MMF'  db               db             \/
+//   MMMb    dPMM                                    `'
+//   M YM   ,M MM  `7MM  `7M'   `MF'`7MM  `7MMpMMMb.   ,pP"Ybd
+//   M  Mb  M' MM    MM    `VA ,V'    MM    MM    MM   8I   `"
+//   M  YM.P'  MM    MM      XMX      MM    MM    MM   `YMMMa.
+//   M  `YM'   MM    MM    ,V' VA.    MM    MM    MM   L.   I8
+// .JML. `'  .JMML..JMML..AM.   .MA..JMML..JMML  JMML. M9mmmP'
 @mixin break($point) {
 	@if $point == full {
 		@media only screen and (max-width: $fullBreak) { @content; }
@@ -37,9 +60,36 @@ $buttonTextShadow:#f4ebff;
 		clear: both;
 	}
 }
-// Extendables *************************************************************
+//                                                        ,,
+// `7MM"""YMM               mm                          `7MM
+//   MM    `7               MM                            MM
+//   MM   d    `7M'   `MF'mmMMmm .gP"Ya `7MMpMMMb.   ,M""bMM
+//   MMmmMM      `VA ,V'    MM  ,M'   Yb  MM    MM ,AP    MM
+//   MM   Y  ,     XMX      MM  8M""""""  MM    MM 8MI    MM
+//   MM     ,M   ,V' VA.    MM  YM.    ,  MM    MM `Mb    MM
+// .JMMmmmmMMM .AM.   .MA.  `Mbmo`Mbmmd'.JMML  JMML.`Wbmd"MML.
 
-/*********************** General Site Wide Selectors ***********************/
+
+
+//              ,,        ,,
+//   .g8""8q.  *MM        db                    mm
+// .dP'    `YM. MM                              MM
+// dM'      `MM MM,dMMb.`7MM  .gP"Ya   ,p6"bo mmMMmm ,pP"Ybd
+// MM        MM MM    `Mb MM ,M'   Yb 6M'  OO   MM   8I   `"
+// MM.      ,MP MM     M8 MM 8M"""""" 8M        MM   `YMMMa.
+// `Mb.    ,dP' MM.   ,M9 MM YM.    , YM.    ,  MM   L.   I8
+//   `"bmmd"'   P^YbmdP'  MM  `Mbmmd'  YMbmd'   `MbmoM9mmmP'
+//                     QO MP
+//                     `bmP
+
+//            ,,                                          ,,        ,,
+//  .M"""bgd  db   mm               `7MMF'     A     `7MF'db      `7MM
+// ,MI    "Y       MM                 `MA     ,MA     ,V            MM
+// `MMb.    `7MM mmMMmm .gP"Ya         VM:   ,VVM:   ,V `7MM   ,M""bMM  .gP"Ya
+//   `YMMNq.  MM   MM  ,M'   Yb         MM.  M' MM.  M'   MM ,AP    MM ,M'   Yb
+// .     `MM  MM   MM  8M""""""         `MM A'  `MM A'    MM 8MI    MM 8M""""""
+// Mb     dM  MM   MM  YM.    ,          :MM;    :MM;     MM `Mb    MM YM.    ,
+// P"Ybmmd" .JMML. `Mbmo`Mbmmd'           VF      VF    .JMML.`Wbmd"MML.`Mbmmd'
 html {
 	background-color:white;
 	background-image:
@@ -219,7 +269,15 @@ footer {
 		//text-shadow: 0px 0px 6px $buttonBorderL;
 	}
 }
-/*********************** Page Specific Selectors ***************************/
+// `7MM"""Mq.
+//   MM   `MM.
+//   MM   ,M9 ,6"Yb.  .P"Ybmmm .gP"Ya  ,pP"Ybd
+//   MMmmdM9 8)   MM :MI  I8  ,M'   Yb 8I   `"
+//   MM       ,pm9MM  WmmmP"  8M"""""" `YMMMa.
+//   MM      8M   MM 8M       YM.    , L.   I8
+// .JMML.    `Moo9^Yo.YMMMMMb  `Mbmmd' M9mmmP'
+//                   6'     dP
+//                   Ybmmmd'
 .homeDesc {
 	float:right;
 	position:relative;
