--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-/*********************** General Site Wide Selectors ***********************/
 html {
   background-color: white;
   background-image: -webkit-repeating-linear-gradient(45deg, rgba(224, 204, 255, 0.5), rgba(224, 204, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 15px, rgba(20, 0, 51, 0.1) 15px, rgba(20, 0, 51, 0.1) 25px, rgba(224, 204, 255, 0.5) 25px, rgba(224, 204, 255, 0.5) 30px, rgba(20, 0, 51, 0.1) 30px, rgba(20, 0, 51, 0.1) 45px, rgba(255, 255, 255, 0.5) 45px, rgba(255, 255, 255, 0.5) 100px), -webkit-repeating-linear-gradient(135deg, rgba(224, 204, 255, 0.5), rgba(224, 204, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 10px, rgba(255, 255, 255, 0.5) 15px, rgba(20, 0, 51, 0.1) 15px, rgba(20, 0, 51, 0.1) 25px, rgba(255, 255, 255, 0.5) 25px, rgba(255, 255, 255, 0.5) 30px, rgba(20, 0, 51, 0.1) 30px, rgba(20, 0, 51, 0.1) 45px, rgba(255, 255, 255, 0.5) 45px, rgba(255, 255, 255, 0.5) 100px);
@@ -87,7 +86,7 @@ header, section, footer {
 a.button:link, a.button:visited {
   background-image: -webkit-linear-gradient(-80deg, #dac1ff, #7e59b5);
   background-image: -moz-linear-gradient(-80deg, #dac1ff, #7e59b5);
-  background-image: linear, -80deg, #dac1ff, #7e59b5;
+  background-image: linear-gradient(-80deg, #dac1ff, #7e59b5);
   border-top: 2px solid #9f78d9;
   border-right: 2px solid #7b4ac2;
   border-bottom: 2px solid #7b4ac2;
@@ -100,7 +99,7 @@ a.button:link, a.button:visited {
 a.button:hover, a.button:active {
   background-image: -webkit-linear-gradient(-80deg, #7e59b5, #dac1ff);
   background-image: -moz-linear-gradient(-80deg, #7e59b5, #dac1ff);
-  background-image: linear, -80deg, #7e59b5, #dac1ff;
+  background-image: linear-gradient(-80deg, #7e59b5, #dac1ff);
   border-top: 2px solid #7b4ac2;
   border-right: 2px solid #9f78d9;
   border-bottom: 2px solid #9f78d9;
@@ -124,7 +123,6 @@ footer {
     background-color: transparent;
     color: #9f78d9; }
 
-/*********************** Page Specific Selectors ***************************/
 .homeDesc {
   float: right;
   position: relative;
