--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
 			<footer>
 				<p>I would love to hear about your project and get to work. Email me at <a href="mailto:workwith@fitz.to">workwith@fitz.to</a>.</p>
 				<p>Let's connect...</p>
-				<a href="mailto:workwith@fitz.to" class="icon icon-mail" target="_blank"></a>
-				<a href="http://www.linkedin.com/in/fitzhughryland/" class="icon icon-linkedin" target="_blank"></a>
-				<a href="http://twitter.com/fitzhuge/" class="icon icon-twitter" target="_blank"></a>
+				<a href="mailto:workwith@fitz.to" target="_blank">Email</a>
+				<a href="http://www.linkedin.com/in/fitzhughryland/" target="_blank">LinkedIn</a>
+				<a href="http://twitter.com/fitzhuge/" target="_blank">Twitter</a>
 			</footer>
         </div>
         <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
