--- a/css/main.scss
+++ b/css/main.scss
@@ -1,4 +1,5 @@
 // http://patorjk.com/software/taag/#p=display&f=Georgia11&t=Type%20Something%20
+// http://patorjk.com/software/taag/#p=display&f=4Max&t=Type%20Something%20
 // `7MMF'                                               mm
 //   MM                                                 MM
 //   MM  `7MMpMMMb.pMMMb. `7MMpdMAo.  ,pW"Wq.`7Mb,od8 mmMMmm ,pP"Ybd
@@ -37,6 +38,14 @@ $buttonD:#7e59b5;
 $buttonBorderL:#9f78d9;
 $buttonBorderD:#7b4ac2;
 $buttonTextShadow:#f4ebff;
+
+// media querys shamelessly stolen/marginally adapted from https://gist.github.com/miguelmota/5316827
+$mobile-max-size: 640px !default;
+$tablet-min-size: 768px !default;
+$tablet-max-size: 979px !default;
+$desktop-min-size: 979px !default;
+$desktop-large-min-size: 1200px !default;
+
 //                   ,,               ,,             gp
 // `7MMM.     ,MMF'  db               db             \/
 //   MMMb    dPMM                                    `'
@@ -53,6 +62,44 @@ $buttonTextShadow:#f4ebff;
 		@media only screen and (max-width: $mobileBreak) { @content; }
 	}
 }
+
+
+// media querys shamelessly stolen/marginally adapted from https://gist.github.com/miguelmota/5316827
+@mixin break($media) {
+	@if $media == mobile {
+		@media only screen and (max-width: $mobile-max-size) { @content; }
+	}
+	@else if $media == mobile-portrait {
+		@media only screen and (max-width: $mobile-max-size) and (orientation: portrait) { @content; }
+	}
+	@else if $media == mobile-landscape {
+		@media only screen and (max-width: $mobile-max-size) and (orientation: landscape) { @content; }
+	}
+	@else if $media == mobile-tablet {
+		@media only screen and (max-width: $tablet-max-size) { @content; }
+	}
+	@else if $media == tablet {
+		@media only screen and (min-width: $tablet-min-size) and (max-width: $tablet-max-size) { @content; }
+	}
+	@else if $media == tablet-andup {
+		@media only screen and (min-width: $tablet-min-size) { @content; }
+	}
+	@else if $media == tablet-landscape {
+		@media only screen and (min-width: $tablet-max-size) and (orientation: landscape) { @content; }
+	}
+	@else if $media == tablet-desktop {
+		@media only screen and (min-width: $tablet-max-size) { @content; }
+	}
+	@else if $media == desktop {
+		@media only screen and (min-width: $desktop-min-size) { @content; }
+	}
+	@else if $media == desktop-large {
+		@media only screen and (min-width: $desktop-large-min-size) { @content; }
+	}
+}
+
+
+
 @mixin group() {
 	&:after {
 		content: "";
@@ -198,15 +245,12 @@ a:hover, a:active {
 }
 .wrap {
 	margin: 1em auto;
-	max-width:$fullWidth;
+	max-width:$mobileWidth;
 	min-height:500px;
 	position:relative;
 	@include group();
-	@include break(full) {
-		width: 95%;
-	}
-	@include break(mobile) {
-		max-width: $mobileWidth;
+	@include break(desktop) {
+		max-width: 95%;
 	}
 }
 header, section, footer {
@@ -232,7 +276,7 @@ a.button:link, a.button:visited {
 	border-bottom:2px solid $buttonBorderD;
 	border-left:2px solid $buttonBorderL;
 	border-radius:2em;
-	color:#603e92;
+	color:$black;
 	padding: 1em;
 	text-decoration:none;
 }
@@ -266,7 +310,6 @@ footer {
 	a.icon:hover, a.icon:active {
 		background-color:transparent;
 		color:$buttonBorderL;
-		//text-shadow: 0px 0px 6px $buttonBorderL;
 	}
 }
 // `7MM"""Mq.
@@ -278,6 +321,12 @@ footer {
 // .JMML.    `Moo9^Yo.YMMMMMb  `Mbmmd' M9mmmP'
 //                   6'     dP
 //                   Ybmmmd'
+//
+// 88  88  dP"Yb  8b    d8 888888
+// 88  88 dP   Yb 88b  d88 88__
+// 888888 Yb   dP 88YbdP88 88""
+// 88  88  YbodP  88 YY 88 888888
+//
 .homeDesc {
 	float:right;
 	position:relative;
@@ -299,11 +348,6 @@ footer {
 		font-size: 1.3em;
 		text-align: center;
 	}
-	p {
-		@include break(mobile) {
-			text-align: left;
-		}
-	}
 }
 .logo {
 	height:auto;
@@ -312,10 +356,8 @@ footer {
 	top:-2em;
 	width:60%;
 	z-index:700;
-	@include break(mobile) {
-		opacity: 0.1;
-		width:115%;
-	}
+	opacity: 0.1;
+	width:115%;
 }
 .title {
 	float: left;
