--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
         {% for project in site.categories.make %}
             <a href="{{ project.link }}" target="_blank" class="project">
                 <h3>{{ project.title }}</h3>
-                <img src="{{ project.img }}" width="698" height="426"/>
+                <!-- <img src="{{ project.img }}" width="698" height="426"/> -->
             </a>
         {% endfor %}
     </section>
