class name cleanup

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,8 @@
     <body {% if page.bodyClass %} class="{{ page.bodyClass }}" {% endif %}>
         <div class="wrap">
             <header>
-                <img src="{{site.url_root}}/images/logo_0_1.png" width="456" height="561" alt="Fitz" class="logo" />
-                <div class="homeDesc">
+                <img src="{{site.url_root}}/images/logo_0_1.png" width="456" height="561" alt="Fitz" class="header_logo" />
+                <div class="header_text">
                     <h1>Fitz Ryland</h1>
                     <h2>Freelance Web Designer</h2>
                     <h3>http://workwith.fitz.to/</h3>
