--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,17 +1,17 @@
 {% include header.html %}
     <section id="portfolio">
-        <h2 class="title">Portfolio</h2>
-        <p class="secDesc">To give you a brief idea of what I've been up to recently, here are three websites that I completed in 2013. Each represents a passion of mine -- professional or otherwise -- and are built using the latest web standards on WordPress.</p>
+        <h2 class="home_section-title">Portfolio</h2>
+        <p class="home_section-desc">To give you a brief idea of what I've been up to recently, here are three websites that I completed in 2013. Each represents a passion of mine -- professional or otherwise -- and are built using the latest web standards on WordPress.</p>
         {% for project in site.categories.make %}
-            <a href="{{ project.link }}" target="_blank" class="project">
+            <a href="{{ project.link }}" target="_blank" class="projectThumb" style="background-image:{{ project.img }};">
                 <h3>{{ project.title }}</h3>
                 <!-- <img src="{{ project.img }}" width="698" height="426"/> -->
             </a>
         {% endfor %}
     </section>
     <section id="documentation">
-        <h2 class="title">Documentation</h2>
-        <p class="secDesc">This is where I will documenting some of my processes and work. I would love your help. This is where I will documenting some of my processes and work. I would love your help.</p>
+        <h2 class="home_section-title">Documentation</h2>
+        <p class="home_section-desc">This is where I will documenting some of my processes and work. I would love your help. This is where I will documenting some of my processes and work. I would love your help.</p>
         {% for post in site.categories.document %}
         <div class="post">
             <h3>
