--- a/css/main.css
+++ b/css/main.css
@@ -100,6 +100,30 @@ header, section, footer {
     display: table;
     clear: both; }
 
+.header_text {
+  position: relative;
+  z-index: 1000;
+  float: none;
+  text-align: center;
+  width: 100%; }
+  .header_text h1 {
+    margin: 0.2em 0 0;
+    text-align: center; }
+  .header_text h2 {
+    font-size: 1.4em; }
+  .header_text h3 {
+    font-size: 1.3em;
+    text-align: center; }
+
+.header_logo {
+  height: auto;
+  left: 1em;
+  opacity: 0.1;
+  position: absolute;
+  top: -1em;
+  width: 90%;
+  z-index: 700; }
+
 footer {
   text-align: center; }
   footer p {
@@ -114,36 +138,12 @@ footer {
     background-color: transparent;
     color: #9f78d9; }
 
-.homeDesc {
-  position: relative;
-  z-index: 1000;
-  float: none;
-  text-align: center;
-  width: 100%; }
-  .homeDesc h1 {
-    margin: 0.2em 0 0;
-    text-align: center; }
-  .homeDesc h2 {
-    font-size: 1.4em; }
-  .homeDesc h3 {
-    font-size: 1.3em;
-    text-align: center; }
-
-.logo {
-  height: auto;
-  left: 1em;
-  opacity: 0.1;
-  position: absolute;
-  top: -1em;
-  width: 90%;
-  z-index: 700; }
-
-.title {
+.home_section-title {
   font-size: 1.9em;
   text-align: center;
   width: 40%; }
 
-.secDesc {
+.home_section-desc {
   display: inline-block;
   float: none;
   width: 100%; }
