--- a/css/main.scss
+++ b/css/main.scss
@@ -278,6 +278,33 @@ header, section, footer {
 	z-index:0;
 	@include group();
 }
+.header_text {
+	position:relative;
+	z-index:1000;
+	float:none;
+	text-align: center;
+	width:100%;
+	h1 {
+		margin:0.2em 0 0;
+		text-align: center;
+	}
+	h2 {
+		font-size: 1.4em;
+	}
+	h3 {
+		font-size: 1.3em;
+		text-align: center;
+	}
+}
+.header_logo {
+	height:auto;
+	left:1em;
+	opacity: 0.1;
+	position:absolute;
+	top:-1em;
+	width:90%;
+	z-index:700;
+}
 footer {
 	text-align:center;
 	p {
@@ -312,39 +339,12 @@ footer {
 // 888888 Yb   dP 88YbdP88 88""
 // 88  88  YbodP  88 YY 88 888888
 //
-.homeDesc {
-	position:relative;
-	z-index:1000;
-	float:none;
-	text-align: center;
-	width:100%;
-	h1 {
-		margin:0.2em 0 0;
-		text-align: center;
-	}
-	h2 {
-		font-size: 1.4em;
-	}
-	h3 {
-		font-size: 1.3em;
-		text-align: center;
-	}
-}
-.logo {
-	height:auto;
-	left:1em;
-	opacity: 0.1;
-	position:absolute;
-	top:-1em;
-	width:90%;
-	z-index:700;
-}
-.title {
+.home_section-title {
 	font-size: 1.9em;
 	text-align:center;
 	width:40%;
 }
-.secDesc {
+.home_section-desc {
 	display: inline-block;
 	float:none;
 	width:100%;
