added anchor to footer for contact

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-			<footer>
+			<footer id="contact">
 				<p>I would love to hear about your project and get to work. Email me at <a href="mailto:workwith@fitz.to">workwith@fitz.to</a>.</p>
 				<p>Let's connect...</p>
 				<a href="mailto:workwith@fitz.to" target="_blank">Email</a>
