--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,9 +3,9 @@
         <h2 class="home_section-title">Portfolio</h2>
         <p class="home_section-desc">To give you a brief idea of what I've been up to recently, here are three websites that I completed in 2013. Each represents a passion of mine -- professional or otherwise -- and are built using the latest web standards on WordPress.</p>
         {% for project in site.categories.make %}
-            <a href="{{ project.link }}" target="_blank" class="projectThumb" style="background-image:{{ project.img }};">
+            <a href="{{ project.link }}" target="_blank" class="project-thumb">
                 <h3>{{ project.title }}</h3>
-                <!-- <img src="{{ project.img }}" width="698" height="426"/> -->
+                <div class="project-thumb-image" style="background-image:url({{ project.img }});"></div>
             </a>
         {% endfor %}
     </section>
