basic footer mobile style & layout

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,11 @@
 			<footer id="contact">
-				<p>I would love to hear about your project and get to work. Email me at <a href="mailto:workwith@fitz.to">workwith@fitz.to</a>.</p>
-				<p>Let's connect...</p>
-				<a href="mailto:workwith@fitz.to" target="_blank">Email</a>
-				<a href="http://www.linkedin.com/in/fitzhughryland/" target="_blank">LinkedIn</a>
-				<a href="http://twitter.com/fitzhuge/" target="_blank">Twitter</a>
+        <h2 class="home_section-title">Contact</h2>
+				<p>I build websites for businesses that value function and beauty. Designing and creating user interfaces that help businesses succeed is my passion. I currently have limited availability for new projects, so let's talk now and get to work.</p>
+        <div class="footer_social">
+          <a href="mailto:workwith@fitz.to" target="_blank">Email</a>
+          <a href="http://www.linkedin.com/in/fitzhughryland/" target="_blank">LinkedIn</a>
+          <a href="http://twitter.com/fitzhuge/" target="_blank">Twitter</a>
+        </div>
 			</footer>
         </div>
         <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
