--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,9 @@ h6 {
   font-size: 1em; }
 
 a:link, a:visited {
-  color: #6402ff;
+  border-bottom: 1px solid #6402ff;
+  color: #20005c;
+  text-decoration: none;
   -webkit-transition: all 0.2s ease;
   -moz-transition: all 0.2s ease;
   -o-transition: all 0.2s ease;
@@ -41,7 +43,7 @@ a:link, a:visited {
   transition: all 0.2s ease; }
 
 a:hover, a:active {
-  color: white; }
+  color: #6402ff; }
 
 a.button:link, a.button:visited {
   background-image: -webkit-linear-gradient(-80deg, #dac1ff, #7e59b5);
@@ -155,6 +157,7 @@ footer p {
     opacity: 1; }
 
 a.project-thumb:link, a.project-thumb:visited {
+  border-bottom: none;
   color: #20005c;
   text-shadow: 0em 0em 0.5em white; }
 
