--- a/css/main.scss
+++ b/css/main.scss
@@ -217,12 +217,13 @@ h6 {
 	font-size:1em;
 }
 a:link, a:visited {
-	color:$purple;
+	border-bottom: 1px solid $purple;
+	color:$black;
+	text-decoration: none;
 	@include transition(all);
 }
 a:hover, a:active {
-//	background-color:$black;
-	color:white;
+	color:$purple;
 }
 a.button:link, a.button:visited {
 	background-image: -webkit-linear-gradient(-80deg, $buttonL, $buttonD);
@@ -355,6 +356,7 @@ footer {
 	}
 }
 a.project-thumb:link, a.project-thumb:visited {
+	border-bottom: none;
 	color: $black;
 	text-shadow: 0em 0em 0.5em white;
 }
