basic media query break points and excerpt for posts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,12 +11,13 @@
     </section>
     <section id="documentation">
         <h2 class="home_section-title">Documentation</h2>
-        <p class="home_section-desc">This is where I will documenting some of my processes and work. I would love your help. This is where I will documenting some of my processes and work. I would love your help.</p>
+        <p class="home_section-desc">This is where I will be documenting my work in process. I do it to inform other professionals and so that other professionals can tell me why I am wrong. We all learn! I am also creating helpful material for my clients.</p>
         {% for post in site.categories.document %}
-        <div class="post">
+        <div class="home_post">
             <h3>
                 <a href="{{ post.url }}">{{ post.title }}</a>
             </h3>
+            <p>{{ post.excerpt }}</p>
         </div>
         {% endfor %}
     </section>
