--- a/css/main.css
+++ b/css/main.css
@@ -82,13 +82,19 @@ a.button:hover, a.button:active {
 
 .wrap {
   margin: 1em auto;
-  max-width: 20em;
+  width: 20em;
   min-height: 500px;
   position: relative; }
   .wrap:after {
     content: "";
     display: table;
     clear: both; }
+  @media only screen and (min-width: 768px) {
+    .wrap {
+      width: 40em; } }
+  @media only screen and (min-width: 979px) {
+    .wrap {
+      width: 60em; } }
 
 header, section, footer {
   background-color: rgba(255, 255, 255, 0.8);
@@ -179,3 +185,8 @@ a.project-thumb:link, a.project-thumb:visited {
   -o-transition: opacity 0.2s ease;
   -ms-transition: opacity 0.2s ease;
   transition: opacity 0.2s ease; }
+
+.home_post h3 {
+  margin-bottom: 0; }
+.home_post p {
+  margin-top: 0.5em; }
