--- a/css/main.css
+++ b/css/main.css
@@ -14,11 +14,8 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Libre Baskerville', serif;
   font-weight: 400; }
 
-h1 {
-  font-size: 2.5em; }
-
-h2 {
-  font-size: 2.2em; }
+h1, h2 {
+  font-size: 1.9em; }
 
 h3 {
   font-size: 1.5em; }
@@ -89,12 +86,6 @@ a.button:hover, a.button:active {
     content: "";
     display: table;
     clear: both; }
-  @media only screen and (min-width: 768px) {
-    .wrap {
-      width: 40em; } }
-  @media only screen and (min-width: 979px) {
-    .wrap {
-      width: 60em; } }
 
 header, section, footer {
   background-color: rgba(255, 255, 255, 0.8);
@@ -115,7 +106,8 @@ header, section, footer {
   width: 100%; }
   .header_text h1 {
     margin: 0.2em 0 0;
-    text-align: center; }
+    text-align: center;
+    font-size: 2.7em; }
   .header_text h2 {
     font-size: 1.4em; }
   .header_text h3 {
@@ -138,7 +130,6 @@ footer p {
   text-align: center; }
 
 .home_section-title {
-  font-size: 1.9em;
   text-align: center;
   width: 40%; }
 
