--- a/css/main.scss
+++ b/css/main.scss
@@ -198,25 +198,22 @@ body {
 }
 h1, h2, h3, h4, h5, h6 {
 	font-family: 'Libre Baskerville', serif;
-	font-weight:400;
+	font-weight: 400;
 }
-h1 {
-	font-size:2.5em;
-}
-h2 {
-	font-size:2.2em;
+h1, h2 {
+	font-size: 1.9em;
 }
 h3 {
-	font-size:1.5em;
+	font-size: 1.5em;
 }
 h4 {
-	font-size:1.3em;
+	font-size: 1.3em;
 }
 h5 {
-	font-size:1.1em;
+	font-size: 1.1em;
 }
 h6 {
-	font-size:1em;
+	font-size: 1em;
 }
 a:link, a:visited {
 	border-bottom: 1px solid $purple;
@@ -269,12 +266,12 @@ a.button:hover, a.button:active {
 	min-height: 500px;
 	position: relative;
 	@include group();
-	@include break(tablet-andup) {
-		width: $midWidth;
-	}
-	@include break(desktop) {
-		width: $fullWidth;
-	}
+	// @include break(tablet-andup) {
+	// 	width: $midWidth;
+	// }
+	// @include break(desktop) {
+	// 	width: $fullWidth;
+	// }
 }
 header, section, footer {
 	background-color:$bgWhite;
@@ -293,6 +290,7 @@ header, section, footer {
 	h1 {
 		margin:0.2em 0 0;
 		text-align: center;
+		font-size: 2.7em;
 	}
 	h2 {
 		font-size: 1.4em;
@@ -335,7 +333,6 @@ footer {
 // 88  88  YbodP  88 YY 88 888888
 //
 .home_section-title {
-	font-size: 1.9em;
 	text-align:center;
 	width:40%;
 }
@@ -391,3 +388,12 @@ a.project-thumb:link, a.project-thumb:visited {
 		margin-top: 0.5em;
 	}
 }
+// .dP"Y8 88 88b 88  dP""b8 88     888888     8888b.   dP"Yb   dP""b8
+// `Ybo." 88 88Yb88 dP   `" 88     88__        8I  Yb dP   Yb dP   `"
+// o.`Y8b 88 88 Y88 Yb  "88 88  .o 88""        8I  dY Yb   dP Yb
+// 8bodP' 88 88  Y8  YboodP 88ood8 888888     8888Y"   YbodP   YboodP
+
+// .dP"Y8 88 88b 88  dP""b8 88     888888     88""Yb  dP"Yb  88""Yb 888888
+// `Ybo." 88 88Yb88 dP   `" 88     88__       88__dP dP   Yb 88__dP   88
+// o.`Y8b 88 88 Y88 Yb  "88 88  .o 88""       88"""  Yb   dP 88"Yb    88
+// 8bodP' 88 88  Y8  YboodP 88ood8 888888     88      YbodP  88  Yb   88
