--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,9 +4,9 @@
             <header>
                 <img src="{{site.url_root}}/images/logo_0_1.png" width="456" height="561" alt="Fitz" class="header_logo" />
                 <div class="header_text">
-                    <h1>Fitz Ryland</h1>
+                    <a href="/"><h1>Fitz Ryland</h1></a>
                     <h2>Freelance Web Designer</h2>
-                    <h3>http://workwith.fitz.to/</h3>
+                    <a href="/"><h3>http://workwith.fitz.to/</h3></a>
                     {% include nav.html %}
                 </div>
             </header>
