--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,8 @@ h4 {
   font-size: 1.3em; }
 
 h5 {
-  font-size: 1.1em; }
+  font-size: 1.1em;
+  margin: 1.2em 0 0.5em; }
 
 h6 {
   font-size: 1em; }
@@ -76,6 +77,12 @@ a.button:hover, a.button:active {
 
 ::-moz-selection {
   background: rgba(224, 204, 255, 0.5); }
+
+p {
+  margin: 0.5em 0; }
+
+img {
+  max-width: 100%; }
 
 .wrap {
   margin: 1em auto;
