--- a/css/main.css
+++ b/css/main.css
@@ -130,6 +130,9 @@ header, section, footer {
   width: 90%;
   z-index: 700; }
 
+nav a:not(:last-child) {
+  margin-right: 0.5em; }
+
 footer p {
   margin-top: 0; }
 
