--- a/css/main.scss
+++ b/css/main.scss
@@ -193,9 +193,10 @@ body {
 	font:16px 'Open Sans', sans-serif;
 	margin:0;
 	padding:0;
-	@include break(mobile-landscape) {
-		font-size: 12px;
-	}
+	// TODO - make this work only on mobile!
+	// @include break(mobile-landscape) {
+	// 	font-size: 12px;
+	// }
 }
 h1, h2, h3, h4, h5, h6 {
 	font-family: 'Libre Baskerville', serif;
@@ -369,16 +370,25 @@ footer {
 	text-align: center;
 	text-decoration: none;
 	width: 18em;
-	h3 {
-		background-color: $white;
-		padding: 0.5em 0;
-		position: relative;
-		z-index: 800;
-	}
 	&:hover {
 		.project-thumb-image {
 			opacity: 1;
 		}
+	}
+	@include break(tablet-andup) {
+		float: left;
+		margin-top: 1em;
+		width: 18.5em;
+		&:nth-child(2n-1) {
+			margin-right: 1em;
+		}
+	}
+	h3 {
+		background-color: $white;
+		margin-top: 0;
+		padding: 0.5em 0;
+		position: relative;
+		z-index: 800;
 	}
 }
 a.project-thumb:link, a.project-thumb:visited {
