better section title spacing

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 			<footer id="contact">
-        <h2 class="home_section-title">Contact</h2>
+        <h2 class="section-title">Contact</h2>
 				<p>I build websites for businesses that value function and beauty. Designing and creating user interfaces that help businesses succeed is my passion. I currently have limited availability for new projects, so let's talk now and get to work.</p>
         <nav class="footer_social">
           <a href="mailto:workwith@fitz.to" target="_blank">Email</a>
