--- a/_layouts/single-document.html
+++ b/_layouts/single-document.html
@@ -1,11 +1,11 @@
 {% include header.html %}
   <section>
-  	<h1>{{ page.title }}</h1>
+  	<h1 class="section-title">{{ page.title }}</h1>
   	<p>{{ page.excerpt }}</p>
     {{ content }}
   </section>
   <section>
-  	<h2>Latest Posts</h2>
+  	<h2 class="section-title">Latest Posts</h2>
     {% for post in site.categories.document limit:3 %}
     <div class="home_post">
         <h3>
