--- a/_layouts/single-make.html
+++ b/_layouts/single-make.html
@@ -1,6 +1,6 @@
 {% include header.html %}
   <section>
-  	<h1>{{ page.title }}</h1>
+  	<h1 class="section-title">{{ page.title }}</h1>
     <img src="../{{ page.img }}" alt="{{ page.title }}">
     {{ content }}
     <a href="{{ page.link }}" target="_blank">{{ page.link }}</a>
