--- a/css/main.css
+++ b/css/main.css
@@ -151,9 +151,11 @@ footer p {
 .footer_social {
   text-align: center; }
 
-.home_section-title {
-  text-align: center;
-  width: 40%; }
+.section-title {
+  margin-left: 0.5em; }
+  @media only screen and (min-width: 768px) {
+    .section-title {
+      margin-left: 1.5em; } }
 
 .home_section-desc {
   display: inline-block;
