better contact area, link to it, content spacing

--- a/css/main.scss
+++ b/css/main.scss
@@ -337,6 +337,7 @@ footer {
 	}
 }
 .footer_social {
+	margin: 1.5em 0 1em;
 	text-align: center;
 }
 .section-title {
@@ -430,3 +431,16 @@ a.project-thumb:link, a.project-thumb:visited {
 // `Ybo." 88 88Yb88 dP   `" 88     88__       88__dP dP   Yb 88__dP   88
 // o.`Y8b 88 88 Y88 Yb  "88 88  .o 88""       88"""  Yb   dP 88"Yb    88
 // 8bodP' 88 88  Y8  YboodP 88ood8 888888     88      YbodP  88  Yb   88
+
+
+//                                                    ,,        ,,
+//   .g8""8q.                                         db      `7MM
+// .dP'    `YM.                                                 MM
+// dM'      `MM `7M'   `MF'.gP"Ya `7Mb,od8 `7Mb,od8 `7MM   ,M""bMM  .gP"Ya  ,pP"Ybd
+// MM        MM   VA   ,V ,M'   Yb  MM' "'   MM' "'   MM ,AP    MM ,M'   Yb 8I   `"
+// MM.      ,MP    VA ,V  8M""""""  MM       MM       MM 8MI    MM 8M"""""" `YMMMa.
+// `Mb.    ,dP'     VVV   YM.    ,  MM       MM       MM `Mb    MM YM.    , L.   I8
+//   `"bmmd"'        W     `Mbmmd'.JMML.   .JMML.   .JMML.`Wbmd"MML.`Mbmmd' M9mmmP'
+.center {
+	text-align: center;
+}
