--- a/css/main.css
+++ b/css/main.css
@@ -149,6 +149,7 @@ footer p {
   margin-top: 0; }
 
 .footer_social {
+  margin: 1.5em 0 1em;
   text-align: center; }
 
 .section-title {
@@ -213,3 +214,6 @@ a.project-thumb:link, a.project-thumb:visited {
   margin-bottom: 0; }
 .home_post p {
   margin-top: 0.5em; }
+
+.center {
+  text-align: center; }
