first draft of columning system for home

--- a/css/main.scss
+++ b/css/main.scss
@@ -107,9 +107,37 @@ $desktop-large-min-size: 1200px !default;
 //   MM   Y  ,     XMX      MM  8M""""""  MM    MM 8MI    MM
 //   MM     ,M   ,V' VA.    MM  YM.    ,  MM    MM `Mb    MM
 // .JMMmmmmMMM .AM.   .MA.  `Mbmo`Mbmmd'.JMML  JMML.`Wbmd"MML.
-
-
-
+// TODO the nth-child selectors for spacing are weak, because they include the other objects in the parent.
+@mixin midsized-two-column-obj() {
+	@include break(tablet) {
+		float: left;
+		margin-top: 1em;
+		width: 18.5em;
+		&:nth-child(2n-1) {
+			margin-right: 1em;
+		}
+	}
+}
+@mixin full-two-column-obj() {
+	@include break(desktop) {
+		float: left;
+		margin: 1em 0 0;
+		width: 28.5em;
+		&:nth-child(2n-1) {
+			margin-right: 1em;
+		}
+	}
+}
+@mixin full-four-column-obj() {
+	@include break(desktop) {
+		float: left;
+		margin-top: 1em;
+		width: 13.75em;
+		&:not(:last-child) {
+			margin-right: 1em;
+		}
+	}
+}
 //              ,,        ,,
 //   .g8""8q.  *MM        db                    mm
 // .dP'    `YM. MM                              MM
@@ -378,14 +406,8 @@ footer {
 			opacity: 1;
 		}
 	}
-	@include break(tablet-andup) {
-		float: left;
-		margin-top: 1em;
-		width: 18.5em;
-		&:nth-child(2n-1) {
-			margin-right: 1em;
-		}
-	}
+	@include midsized-two-column-obj();
+	@include full-four-column-obj();
 	h3 {
 		background-color: $white;
 		margin-top: 0;
@@ -415,6 +437,8 @@ a.project-thumb:link, a.project-thumb:visited {
 	@include transition(opacity);
 }
 .home_post {
+	@include midsized-two-column-obj();
+	@include full-two-column-obj();
 	h3 {
 		margin-bottom: 0;
 	}
