--- a/css/main.css
+++ b/css/main.css
@@ -172,12 +172,19 @@ footer p {
   width: 18em; }
   .project-thumb:hover .project-thumb-image {
     opacity: 1; }
-  @media only screen and (min-width: 768px) {
+  @media only screen and (min-width: 768px) and (max-width: 979px) {
     .project-thumb {
       float: left;
       margin-top: 1em;
       width: 18.5em; }
       .project-thumb:nth-child(2n-1) {
+        margin-right: 1em; } }
+  @media only screen and (min-width: 979px) {
+    .project-thumb {
+      float: left;
+      margin-top: 1em;
+      width: 13.75em; }
+      .project-thumb:not(:last-child) {
         margin-right: 1em; } }
   .project-thumb h3 {
     background-color: rgba(255, 255, 255, 0.5);
@@ -210,6 +217,20 @@ a.project-thumb:link, a.project-thumb:visited {
   -ms-transition: opacity 0.2s ease;
   transition: opacity 0.2s ease; }
 
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .home_post {
+    float: left;
+    margin-top: 1em;
+    width: 18.5em; }
+    .home_post:nth-child(2n-1) {
+      margin-right: 1em; } }
+@media only screen and (min-width: 979px) {
+  .home_post {
+    float: left;
+    margin: 1em 0 0;
+    width: 28.5em; }
+    .home_post:nth-child(2n-1) {
+      margin-right: 1em; } }
 .home_post h3 {
   margin-bottom: 0; }
 .home_post p {
