--- a/css/main.css
+++ b/css/main.css
@@ -110,6 +110,10 @@ header, section, footer {
     display: table;
     clear: both; }
 
+@media only screen and (min-width: 768px) {
+  header {
+    padding: 1em 0; } }
+
 .header_text {
   position: relative;
   z-index: 1000;
@@ -120,6 +124,9 @@ header, section, footer {
     .header_text {
       float: right;
       width: 20em; } }
+  @media only screen and (min-width: 979px) {
+    .header_text {
+      margin-right: 10em; } }
   .header_text h1 {
     margin: 0.2em 0 0;
     font-size: 2.7em; }
