--- a/_layouts/single-make.html
+++ b/_layouts/single-make.html
@@ -1,16 +1,20 @@
 {% include header.html %}
   <section>
   	<h1 class="section-title">{{ page.title }}</h1>
-    <img src="../{{ page.img }}" alt="{{ page.title }}">
-    {{ content }}
-    <a href="{{ page.link }}" target="_blank">{{ page.link }}</a>
-    {% if page.services %}
-      <h5>Services</h5>
-      <p>{{ page.services }}</p>
-    {% endif %}
-    {% if page.tech %}
-      <h5>Technology</h5>
-      <p>{{ page.tech }}</p>
-    {% endif %}
+    <img src="../{{ page.img }}" alt="{{ page.title }}" class="portfolio-image">
+    <div class="portfolio-description">
+      {{ content }}
+    </div>
+    <div class="portfolio-meta">
+      <a href="{{ page.link }}" target="_blank">{{ page.link }}</a>
+      {% if page.services %}
+        <h5>Services</h5>
+        <p>{{ page.services }}</p>
+      {% endif %}
+      {% if page.tech %}
+        <h5>Technology</h5>
+        <p>{{ page.tech }}</p>
+      {% endif %}
+    </div>
   </section>
 {% include footer.html %}
