--- a/css/main.css
+++ b/css/main.css
@@ -243,5 +243,17 @@ a.project-thumb:link, a.project-thumb:visited {
 .home_post p {
   margin-top: 0.5em; }
 
+.portfolio-image {
+  display: block;
+  margin: 0 auto; }
+
+@media only screen and (min-width: 979px) {
+  .portfolio-description, .portfolio-meta {
+    float: left;
+    margin: 1em 0 0;
+    width: 28.5em; }
+    .portfolio-description:nth-child(2n-1), .portfolio-meta:nth-child(2n-1) {
+      margin-right: 1em; } }
+
 .center {
   text-align: center; }
